--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
   <link rel="icon" href="assets/peekpeek-icon.png" type="image/png">
+  <link rel="apple-touch-icon" href="assets/peekpeek-icon.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
