--- a/index.html
+++ b/index.html
@@ -1,61 +1,27 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PeekPeek</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
-  <link rel="icon" href="assets/peekpeek-icon.png" type="image/png">
-  <link rel="apple-touch-icon" href="assets/peekpeek-icon.png">
-  <link rel="stylesheet" href="style.css">
-  <script src="i18n.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PeekPeek - 下载</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
+    <meta name="description" content="PeekPeek - 探索世界的新方式，随时随地分享和发现精彩瞬间">
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <img src="assets/peekpeek-icon.png" alt="PeekPeek" class="product-icon">
-      <h1>PeekPeek</h1>
-      <div class="language-selector">
-        <button class="language-button" onclick="toggleLanguageMenu()">
-          <span id="currentLanguage">简体中文</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <polyline points="6 9 12 15 18 9"></polyline>
-          </svg>
-        </button>
-        <div class="language-menu" id="languageMenu">
-          <button onclick="selectLanguage('zh-CN')">简体中文</button>
-          <button onclick="selectLanguage('en-US')">English</button>
+    <div class="simple-container">
+        <div class="logo-container">
+            <img src="images/peekpeek-icon.png" alt="PeekPeek Logo" class="circle-logo">
+            <h1>PeekPeek</h1>
         </div>
-      </div>
-      <button class="add-button" id="addButton">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <line x1="12" y1="5" x2="12" y2="19"></line>
-          <line x1="5" y1="12" x2="19" y2="12"></line>
-        </svg>
-        添加账号
-      </button>
+        <div class="download-links">
+            <a href="https://apps.apple.com/us/app/peekpeek/id6742340780" class="download-btn">App Store</a>
+            <a href="https://testflight.apple.com/join/ZtuKqE26" class="download-btn">TestFlight</a>
+            <a href="https://github.com/fengwei0001/peekpeek_android/releases/download/v1.0.0/app-debug.apk" class="download-btn">Android APK</a>
+        </div>
     </div>
-
-    <div class="modal" id="addAccountModal">
-      <div class="modal-content">
-        <h2>添加账号</h2>
-        <form id="addAccountForm">
-          <input type="url" id="accountUrl" placeholder="请输入社交媒体账号链接" required>
-          <div class="modal-actions">
-            <button type="button" class="cancel-button" id="cancelAdd">取消</button>
-            <button type="submit" class="confirm-button">确认添加</button>
-          </div>
-        </form>
-      </div>
-    </div>
-
-    <div class="accounts-list" id="accountsList">
-      <!-- 账号列表将通过 JavaScript 动态生成 -->
-    </div>
-  </div>
-
-  <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
