--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Knewave&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/peekpeek-icon.png" type="image/png">
     <meta name="description" content="PeekPeek - 探索世界的新方式，随时随地分享和发现精彩瞬间">
 </head>
 <body>
