--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="download-links">
             <a href="https://apps.apple.com/us/app/peekpeek/id6742340780" class="download-btn">App Store</a>
             <a href="https://testflight.apple.com/join/ZtuKqE26" class="download-btn">TestFlight</a>
-            <a href="https://github.com/fengwei0001/peekpeek_android/releases/download/v1.0.2/app-debug2.apk" class="download-btn">Android APK</a>
+            <a href="https://github.com/fengwei0001/peekpeek_android/releases/download/v1.0.3/app-release.apk" class="download-btn">Android APK</a>
         </div>
     </div>
     <script src="script.js"></script>
